--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
   <footer>
     <br>
     <br>
+    creado por
     <a href="https://tuwebmisiones.com">TuWebMisiones.com</a>
 </footer>
 </html>
